--- a/index.html
+++ b/index.html
@@ -3393,11 +3393,11 @@
                                         {
                                             "@context": "https://schema.org",
                                             "@type": "WebApplication",
-                                            "@id": "https://www.crazygames.com/game/crossing-the-pit#WebApplication",
+                                            "@id": "https://atopsgeist.github.io/THEPITCONTENTS/",
                                             "name": "Crossing the Pit",
                                             "image": "https://images.crazygames.com/crossingthepitc.png?auto=format,compress&q=75&cs=strip&w=180",
                                             "applicationCategory": "Game",
-                                            "url": "https://www.crazygames.com/game/crossing-the-pit",
+                                            "url": "https://atopsgeist.github.io/THEPITCONTENTS/",
                                             "applicationSubCategory": "Casual Game",
                                             "operatingSystem": "Windows, Chrome OS, Linux, MacOS, Android, iOS",
                                             "description": "Help Henry to cross the pit... Crossing The Pit is the game that started it all and eventually inspired Fleeing The Complex!",
@@ -3539,7 +3539,7 @@
                                                                 :</div>
                                                                 <div class="css-16rvtsf">
                                                                     <div class="css-1r00xtc">
-                                                                        <a href="https://henrystickmin.fandom.com/wiki/Crossing_the_Pit" target="_blank">Fandom</a>
+                                                                        <a href="https://atopsgeist.github.io/THEPITCONTENTS/" target="_blank">Fandom</a>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -5021,8 +5021,7 @@
                             "appStoreUrl": null,
                             "steamStoreUrl": null,
                             "technology": "ruffle",
-                            "jsonLd": "\u003cscript type=\"application/ld+json\"\u003e[{\"@context\":\"https://schema.org\",\"@type\":\"WebApplication\",\"@id\":\"https://www.crazygames.com/game/crossing-the-pit#WebApplication\",\"name\":\"Crossing the Pit\",\"image\":\"https://images.crazygames.com/crossingthepitc.png?auto=format,compress\u0026q=75\u0026cs=strip\u0026w=180\",\"applicationCategory\":\"Game\",\"url\":\"https://www.crazygames.com/game/crossing-the-pit\",\"applicationSubCategory\":\"Casual Game\",\"operatingSystem\":\"Windows, Chrome OS, Linux, MacOS, Android, iOS\",\"description\":\"Help Henry to cross the pit... Crossing The Pit is the game that started it all and eventually inspired Fleeing The Complex!\",\"author\":{\"@type\":\"Person\",\"name\":\"Puffballs United\"},\"aggregateRating\":{\"@type\":\"AggregateRating\",\"ratingValue\":6,\"bestRating\":10,\"worstRating\":1,\"ratingCount\":36368},\"offers\":{\"@type\":\"Offer\",\"price\":\"0\",\"priceCurrency\":\"USD\",\"availability\":\"InStock\"},\"screenshot\":{\"@type\":\"ImageObject\",\"thumbnailUrl\":\"https://images.crazygames.com/crossingthepitc.png?auto=format,compress\u0026q=75\u0026cs=strip\"},\"about\":[{\"@type\":\"Thing\",\"sameAs\":[\"https://henrystickmin.fandom.com/wiki/Crossing_the_Pit\"]}]},{\"@context\":\"https://schema.org\",\"@type\":\"BreadcrumbList\",\"itemListElement\":[{\"@type\":\"ListItem\",\"position\":1,\"item\":{\"@type\":\"Thing\",\"@id\":\"https://www.crazygames.com\",\"name\":\"Home Page\"}},{\"@type\":\"ListItem\",\"position\":2,\"item\":{\"@type\":\"Thing\",\"@id\":\"https://www.crazygames.com/c/casual\",\"name\":\"Casual\"}}]}]\u003c/script\u003e",
-                            "gamesInSeries": [
+                          "gamesInSeries": [
                                 {
                                     "name": "Escaping the Prison",
                                     "slug": "escaping-the-prison",
@@ -7744,17 +7743,17 @@
                                 "alternatives": [
                                     {
                                         "locale": "ar-SA",
-                                        "href": "https://ar.crazygames.com/game/crossing-the-pit",
+                                        "href": "https://atopsgeist.github.io/THEPITCONTENTS/",
                                         "host": "ar.crazygames.com"
                                     },
                                     {
                                         "locale": "cs-CZ",
-                                        "href": "https://www.crazygames.cz/hra/crossing-the-pit",
+                                        "href": "https://atopsgeist.github.io/THEPITCONTENTS/",
                                         "host": "www.crazygames.cz"
                                     },
                                     {
                                         "locale": "da-DK",
-                                        "href": "https://www.crazygames.dk/spil/crossing-the-pit",
+                                        "href": "https://atopsgeist.github.io/THEPITCONTENTS/",
                                         "host": "www.crazygames.dk"
                                     },
                                     {
